# hosterizer

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  hosterizer.md
.kiro/specs/hosterizer/: design.md  requirements.md  tasks.md
.kiro/steering/: aws-standards.md  azure-standards.md  bootstrap-standards.md  gcp-standards.md  general-coding-standards.md  golang-standards.md  postgresql-standards.md  python-standards.md  react-standards.md  sql-standards.md  tailwind-standards.md  terraform-standards.md  typescript-standards.md
backend/: DATABASE_SETUP.md  QUICKSTART.md  README.md
backend/auth-service/: README.md  go.mod  go.sum
backend/cost-service/: pyproject.toml
backend/cost-service/src/cost_service/: __init__.py  main.py
backend/customer-service/: go.mod
backend/ecommerce-service/: go.mod
backend/infrastructure-service/: go.mod
backend/policy-service/: go.mod
backend/shared/: IMPLEMENTATION_SUMMARY.md  README.md  go.mod
backend/shared/database/: README.md  (+3 more)
backend/site-service/: go.mod
bruno/: COLLECTION-SUMMARY.md  INDEX.md  QUICKSTART.md  README.md  SETUP-COMPLETE.md
bruno/hosterizer-api/: README.md  TEST-FLOWS.md  bruno.json  collection.bru
docs/: .gitkeep  api-testing.md
frontend/: README.md
frontend/admin-portal/: index.html  package.json  vite.config.ts
frontend/customer-portal/: index.html  package.json  tsconfig.json  vite.config.ts
scripts/: create-test-user.ps1  create-test-user.sh  init-db.ps1  init-db.sh  init-db.sql  setup.ps1  setup.sh  test-rls.ps1  test-rls.sh  test-rls.sql
terraform/: README.md
(+60 files in other folders)
